@@ -1,4 +1,13 @@
-droplet-1.03 (进行中)
+run-1.44
+------------------------------------------------------------------------
+1.修改login逻辑，再次大幅提升login速度
+    a.直接使用login页面来verify连接
+    b.查找页面元素时，进一步优化将所有可以页面，正向及反向的特征同时查找，最大程度避免超时错误
+2.增加对登录成功的判断的准确性。如果进入到具有两栏式设计，其中登录框具有四行的登录页面，则判断为此IP被屏蔽操作，直接退出
+2.新增登录过程中重新获取验证码的功能
+
+
+droplet-1.03
 ------------------------------------------------------------------------
 1.修复关闭子进程时，由于子进程已经退出（比如login脚本成功即自动退出）导致kill的时候发生异常的问题
 2.droplet.ini配置文件也将保存上次droplet.py运行的type参数
